Update dependencies in `libs.versions.toml`, refactor `build.gradle.kts` to exclude SLF4J binding on main classpath, adjust JUnit configuration, and improve type resolution in `JavaAstScanner`. Clean up test resource handling.